{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 55,
  "lineage": "9a692cf2-73f7-9513-a35b-39faab4fd95b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkInterfaces/abschluss-projekt-nic1",
            "internal_domain_name_suffix": "kyty1zibeq4unfhtvul03asbff.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "jenkins-vm-ip",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-public_ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/virtualNetworks/abschluss-projekt-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "abschluss-projekt-nic1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "abschluss-projekt"
          },
          "dependencies": [
            "azurerm_public_ip.jenkins-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkInterfaces/abschluss-projekt-nic2",
            "internal_domain_name_suffix": "kyty1zibeq4unfhtvul03asbff.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "webserver-vm-ip",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/publicIPAddresses/webserver-vm-public_ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/virtualNetworks/abschluss-projekt-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "abschluss-projekt-nic2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "abschluss-projekt"
          },
          "dependencies": [
            "azurerm_public_ip.webserver-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkins-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkInterfaces/abschluss-projekt-nic1|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkInterfaces/abschluss-projekt-nic1",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_network_security_group.jenkins-vm-nsg",
            "azurerm_public_ip.jenkins-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "server-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkInterfaces/abschluss-projekt-nic2|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkInterfaces/abschluss-projekt-nic2",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic2",
            "azurerm_network_security_group.webserver-vm-nsg",
            "azurerm_public_ip.webserver-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg",
            "location": "westeurope",
            "name": "jenkins-vm-nsg",
            "resource_group_name": "abschluss-projekt",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "all_out",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webserver-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg",
            "location": "westeurope",
            "name": "webserver-vm-nsg",
            "resource_group_name": "abschluss-projekt",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "all_out",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins-vm-public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.73.41.18",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jenkins-vm-public_ip",
            "resource_group_name": "abschluss-projekt",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webserver-vm-public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/publicIPAddresses/webserver-vm-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.73.254.201",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "webserver-vm-public_ip",
            "resource_group_name": "abschluss-projekt",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/virtualNetworks/abschluss-projekt-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "abschluss-projekt",
            "virtual_network_name": "abschluss-projekt-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "abschluss-projekt-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e58d2756-2401-463d-94f3-ad17ae82412d",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/virtualNetworks/abschluss-projekt-network",
            "location": "westeurope",
            "name": "abschluss-projekt-network",
            "resource_group_name": "abschluss-projekt",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abschluss-projekt/providers/Microsoft.Network/virtualNetworks/abschluss-projekt-network/subnets/internal",
                "name": "internal"
              }
            ]
          }
        }
      ]
    }
  ]
}